branches/zip: Merge r5497:5518 from branches/5.1:

------------------------------------------------------------------------
  r5518 | vasil | 2009-07-20 11:29:47 +0300 (Mon, 20 Jul 2009) | 22 lines
  Changed paths:
     M /branches/5.1/handler/ha_innodb.cc
  
  branches/5.1:
  
  Merge a change from MySQL:
  
    ------------------------------------------------------------
    revno: 2874.2.1
    committer: Anurag Shekhar <anurag.shekhar@sun.com>
    branch nick: mysql-5.1-bugteam-windows-warning
    timestamp: Wed 2009-05-13 15:41:24 +0530
    message:
      Bug #39802 On Windows, 32-bit time_t should be enforced
      
      This patch fixes compilation warning, "conversion from 'time_t' to 'ulong', 
      possible loss of data". 
      The fix is to typecast time_t to ulong before assigning it to ulong. 
      Backported this from 6.0-bugteam tree.
    modified:
      storage/archive/ha_archive.cc
      storage/federated/ha_federated.cc
      storage/innobase/handler/ha_innodb.cc
      storage/myisam/ha_myisam.cc
  
  ------------------------------------------------------------------------